<resources>
    <string name="app_name">記帳軟體</string>

    <string name="menu_account_title">帳戶1</string>
    <string name="menu_account2_title">帳戶2</string>

    <string name="menu_setting">設定</string>
    <string name="menu_chart">圖表</string>
    
    <string name="item_tv_expenditure">支出 -$%s</string>
    <string name="item_tv_income">收入 -$%s</string>

    <string name="book_keep_total_assets">總資產: $%s</string>
    <string name="book_keep_budget">預算: $%s / $%s</string>

    <string name="add_keep_expenditures">支出</string>
    <string name="add_keep_income">收入</string>
    <string name="add_keep_class">類型</string>
    <string name="add_keep_account">帳戶</string>
    <string name="add_keep_des">描述</string>
</resources>
