<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/setting_group">
        <item
            android:id="@+id/chart_menu_item"
            android:icon="@drawable/ic_insert_chart"
            android:title="@string/menu_chart" />
        <item
            android:id="@+id/setting_menu_item"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_setting" />
    </group>


    <group android:id="@+id/account_group">
        <item
            android:id="@+id/account1_menu_item"
            android:icon="@drawable/ic_account_balance"
            android:title="@string/menu_account_title" />
        <item
            android:id="@+id/account2_menu_item"
            android:icon="@drawable/ic_credit_card"
            android:title="@string/menu_account2_title" />
    </group>
</menu>