<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main_card">

    <TextView
        android:id="@+id/tv_amount"
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:background="@drawable/bg_main_card2"
        android:gravity="bottom|right"
        android:text="%s$"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_type"
        android:layout_width="match_parent"
        android:layout_height="@dimen/textbox_height"
        android:gravity="right|bottom"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tv_amount">

        <RadioButton
            android:id="@+id/radio_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_keep_expenditures"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large" />

        <RadioButton
            android:id="@+id/radio_expend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_keep_income"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_keep_class"
        app:layout_constraintTop_toBottomOf="@+id/radio_type" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_class"/>

    <TextView
        android:id="@+id/tv_account"
        android:layout_width="match_parent"
        android:layout_height="@dimen/textbox_height"
        android:text="@string/add_keep_account"
        app:layout_constraintTop_toBottomOf="@+id/rv_class" />

    <Spinner
        android:id="@+id/sp_accountlist"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/textbox_height"
        app:layout_constraintBottom_toBottomOf="@+id/tv_account"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="3dp" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_keep_des"
        app:layout_constraintTop_toBottomOf="@+id/tv_account" />

    <EditText
        android:id="@+id/et_desc"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginHorizontal="50dp"
        android:background="#FFFFFF"
        android:gravity="top"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc"
        android:autofillHints=""
        android:inputType="none"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="取消"
        app:layout_constraintStart_toEndOf="@id/btn_enter"
        app:layout_constraintEnd_toEndOf="@+id/et_desc"
        app:layout_constraintTop_toBottomOf="@+id/et_desc" />

    <Button
        android:id="@+id/btn_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="確認"
        app:layout_constraintEnd_toStartOf="@id/btn_cancel"
        app:layout_constraintStart_toStartOf="@+id/et_desc"
        app:layout_constraintTop_toBottomOf="@+id/et_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>